# KVStorage

./: .gitignore  CMakeLists.txt  README.md
docs/: _bucket_8h_source.html  _dictionary_8h_source.html  _i_k_v_storage_8h_source.html  _in_memory_k_v_storage_8h_source.html  _k_v_storage_8h_source.html  annotated.html  annotated_dup.js  class_dictionary-members.html  class_dictionary.html  class_dictionary.js  class_i_k_v_storage-members.html  class_i_k_v_storage.html  class_i_k_v_storage.js  class_in_memory_k_v_storage-members.html  class_in_memory_k_v_storage.html  class_in_memory_k_v_storage.js  classes.html  dir_2d55640c0a15c59e1d7c66cdbf3fd5ea.html  dir_2d55640c0a15c59e1d7c66cdbf3fd5ea.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  index.js  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  struct_bucket-members.html  struct_bucket.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js
include/: KVStorage.h
src/: IKVStorage.h  InMemoryKVStorage.h
src/dict/: Bucket.h  Dictionary.h
tests/: CMakeLists.txt  test_dictionary.cpp  test_kvstorage.cpp
